--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="p-5 mb-4 bg-light round-3">
             <div class="container-fluid text-center py-5"><img class="rounded-circle" src="assets/img/1632385882727.jpg" width="120px" height="120px">
                 <h1 class="display-5 fw-bold">Welcome to My Blog</h1>
-                <p><br>Confused on which course to take? I have got you covered. Browse courses and find out the best course for you. Its free!<br>Code With Harry is my attempt to teach basics and those coding techniques to people in short time which took me ages to learn.<br><br></p><a class="btn btn-primary btn-lg" role="button" href="index.html#social" style="margin-right: 20px;background: var(--bs-red);border-radius: 5px;">Browse Blog</a><a class="btn btn-primary btn-lg" role="button" href="index.html#social" style="margin-right: 20px;background: green;border-radius: 5px;">Browse Videos</a><a class="btn btn-primary btn-lg" role="button" href="index.html#social" style="margin-right: 20px;border-radius: 5px;">Contact Me</a>
+                <p><br>Confused on which course to take? I have got you covered. Browse courses and find out the best course for you. Its free!<br>It is my attempt to teach basics and those coding techniques to people in short time which took me ages to learn.<br><br></p><a class="btn btn-primary btn-lg" role="button" href="index.html#social" style="margin-right: 20px;background: var(--bs-red);border-radius: 5px;">Browse Blog</a><a class="btn btn-primary btn-lg" role="button" href="index.html#social" style="margin-right: 20px;background: green;border-radius: 5px;">Browse Videos</a><a class="btn btn-primary btn-lg" role="button" href="index.html#social" style="margin-right: 20px;border-radius: 5px;">Contact Me</a>
             </div>
         </div>
     </div>
